--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "start:prod": "ng build --prod && cd dist/sanjaygargwebapp && http-server -c-1 -P http://localhost:9000 ."
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "~11.2.11",
     "@angular/platform-browser-dynamic": "~11.2.11",
     "@angular/router": "~11.2.11",
+    "@angular/service-worker": "~11.2.11",
     "firebase-tools": "^9.10.0",
     "ngx-typed-js": "^2.1.0",
     "rxjs": "~6.6.0",
